fix colour contrast in header for wcag AAA compliance

--- a/bundle/css/_footer.scss
+++ b/bundle/css/_footer.scss
@@ -1,8 +1,8 @@
 .footer {
-  background: #2196f3;
+  background: #075697;
   color: white;
   &__left {
-    padding:1em;
+    padding: 1em;
     a {
       color: white;
       text-decoration: underline;
