--- a/bundle/css/_header.scss
+++ b/bundle/css/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background: #2196f3;
+  background: #075697;
   line-height: 2em;
 
   .wide-container {
