--- a/bundle/css/_links.scss
+++ b/bundle/css/_links.scss
@@ -1,12 +1,12 @@
-a{
-  color: #2196f3;
+a {
+  color: #075697;
   text-decoration: none;
   &:hover,
-  &:focus{
+  &:focus {
     text-decoration: underline;
   }
 }
 
-.card a{
-  color:black;
+.card a {
+  color: black;
 }
