--- a/bundle/css/index.scss
+++ b/bundle/css/index.scss
@@ -1,4 +1,4 @@
-$blue: #2196f3;
+$blue: #075697;
 $blue-dark: #1976d2;
 @import "layout";
 @import "links";
